Tests/testsuite/positive/concurrent_states_and_do_activities.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Threading;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "concurrent states and do activities";
  //flags debug;

  region A
  {
    state B
    {
      do / act1;
    }
    
  } and
  {
    state C
    {
      do / act2;
    }
    
  }
  
  
  #>)]
public class example
{
  act1(_ : CancellationToken) : void
  {
    for (mutable i = 0; i < 10; i++)
      Console.WriteLine('0')
  }
  
  act2(_ : CancellationToken) : void
  {
    for (mutable i = 0; i < 5; i++)
      Console.WriteLine('0')
  }
}

module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("BC", ["A", "B", "C"]);
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
EntryB
EntryC
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
[BC]
Ok
END-OUTPUT
*/
