Tests/testsuite/negative/region_separator_not_allowed_in_and_syntax.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Console;
using System.Diagnostics;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;

   name "region separator in 'and' syntax";

   state_conc A
   {
     state B
     {
     }

     [---] // E: Parse Error: Region separator not allowed in 'region' syntax

     state D
     {
     }

   } and
   {

    state C
    {
    }

    [---] // E: Parse Error: Region separator not allowed in 'region' syntax

    state D
    {
    }
  }

   #>)]
  public class example
  {
  }

